--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Texno Gold - Xitoy davlatidan uskuna va maxsus texnikalar</title>
+    <title>{% block title %}Texno Gold - Xitoy davlatidan uskuna va maxsus texnikalar{% endblock %}</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" sizes="180x180" href="{% static '/images/favicon/apple-touch-icon.png' %}">
