--- a/src/templates/store/products.html
+++ b/src/templates/store/products.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block title %}{{ cat_name }}{% endblock %}
 {% block content %} 
 
 <div class="breadcrumbs">
