--- a/src/templates/store/product.html
+++ b/src/templates/store/product.html
@@ -126,51 +126,53 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Leave a Review</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Buyurtma berish</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label for="review-name">Your Name</label>
+                            <label for="review-name">Ism va familiyangiz*</label>
                             <input class="form-control" type="text" id="review-name" required>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label for="review-email">Your Email</label>
-                            <input class="form-control" type="email" id="review-email" required>
+                            <label for="review-email">Yashash manzilingiz*</label>
+                            <input class="form-control" type="text" id="review-email" required>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label for="review-subject">Subject</label>
-                            <input class="form-control" type="text" id="review-subject" required>
+                            <label for="review-subject">Elektron pochta*</label>
+                            <input class="form-control" type="email" id="review-subject" required>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="form-group">
-                            <label for="review-rating">Rating</label>
-                            <select class="form-control" id="review-rating">
-                                <option>5 Stars</option>
-                                <option>4 Stars</option>
-                                <option>3 Stars</option>
-                                <option>2 Stars</option>
-                                <option>1 Star</option>
-                            </select>
+                            <label for="review-subject">Telefon raqamingiz*</label>
+                            <input class="form-control" type="text" id="review-subject" required>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="form-group">
+                            <label for="review-subject">Mahsulot</label>
+                            <input class="form-control" type="text" value="{{product.name}}" readonly>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="review-message">Review</label>
-                    <textarea class="form-control" id="review-message" rows="8" required></textarea>
+                    <label for="review-message">Izoh</label>
+                    <textarea class="form-control" id="review-message" rows="8" placeholder="Biznesingiz yoki buyurtma bermoqchi bo'lgan uskuna va maxsus texnikangiz haqida izoh yozing"></textarea>
                 </div>
             </div>
             <div class="modal-footer button">
-                <button type="button" class="btn">Submit Review</button>
+                <button type="button" class="btn">Yuborish</button>
             </div>
         </div>
     </div>
